kubernetes/prod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: central-cash-management
  namespace: fusionx-ui
  labels:
    app: central-cash-management
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: central-cash-management
  type: ClusterIP
